--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 400px) {
+/* @media screen and (max-width: 400px) {
   #about,
   #services,
   #contact,
@@ -8,5 +8,27 @@
 
   #portfolio {
     width: 110%;
+  }
+} */
+/* Media query for mobile devices */
+@media (max-width: 767px) {
+  #services {
+    padding: 30px 0; /* Further reduced padding for mobile */
+  }
+
+  #portfolio {
+    padding: 30px 0; /* Ensure the portfolio section also has appropriate spacing */
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #about,
+  #services,
+  #contact,
+  #footer,
+  #portfolio {
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
